Добавлен класс Event Command для использования ивентов в MVVM. Кнопки управления окном выделены в отдельный UserControl

--- a/Refactoring/App.xaml
+++ b/Refactoring/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application x:Class="Refactoring.App"
+﻿<Application x:Class="UnevenArchivatorMVVM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Refactoring"
              StartupUri="View\MainWindow.xaml">
     <Application.Resources>
     </Application.Resources>
