--- a/Refactoring/View/MainDictionary.xaml
+++ b/Refactoring/View/MainDictionary.xaml
@@ -1,84 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Refactoring.View">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <SolidColorBrush x:Key="DefaultBackGround">#191817</SolidColorBrush>
     <SolidColorBrush x:Key="LightUpBackGround">#302F2E</SolidColorBrush>
     <SolidColorBrush x:Key="StrongLightUpBackGR">#FF686868</SolidColorBrush>
     <SolidColorBrush x:Key="ListViewBackGround">#FF2D2D30</SolidColorBrush>
-    <SolidColorBrush x:Key="RedExit">#C1292E</SolidColorBrush>
-    <SolidColorBrush x:Key="FadedBlue">#235789</SolidColorBrush>
     <SolidColorBrush x:Key="FadedBlueMinus">#7F235789</SolidColorBrush>
     <!--По сути цвет шрифта-->
     <SolidColorBrush x:Key="FadedWhite">#FFE1E1E1</SolidColorBrush>
-
-    <!--Подсветка при наведении и стили кнопок выход, свернуть, полный экран-->
-    <Style x:Key="LightUp" TargetType="{x:Type Grid}">
-        <Setter Property="Background" Value="{StaticResource DefaultBackGround}"/>
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource LightUpBackGround}"/>
-            </Trigger>
-        </Style.Triggers>
-    </Style>
-    <Style x:Key="ExitButton" TargetType="{x:Type Button}">
-        <Style.Resources>
-            <ResourceDictionary>
-                <Style TargetType="Rectangle">
-                    <Setter Property="Fill" Value="{StaticResource RedExit}"/>
-                    <Setter Property="Height" Value="0.75"/>
-                    <Setter Property="Width" Value="27"/>
-                    <Setter Property="RadiusX" Value="0.5"/>
-                    <Setter Property="RadiusY" Value="0.5"/>
-                    <Setter Property="LayoutTransform">
-                        <Setter.Value>
-                            <RotateTransform Angle="45"/>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ResourceDictionary>
-        </Style.Resources>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <Grid Style="{StaticResource LightUp}">
-                        <!--STYLE THERE-->
-                        <Rectangle/>
-                        <Rectangle>
-                            <Rectangle.LayoutTransform>
-                                <RotateTransform Angle="315"/>
-                            </Rectangle.LayoutTransform>
-                        </Rectangle>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-    <Style x:Key="FullSizeButton" TargetType="{x:Type Button}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <Grid Style="{StaticResource LightUp}">
-                        <Rectangle Stroke="{StaticResource FadedBlue}" StrokeThickness="1.5" Margin="5,5,5,5" />
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-    <Style x:Key="MinimizeButton" TargetType="{x:Type Button}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <Grid Style="{StaticResource LightUp}">
-                        <!--is this the right choice to draw a button ??-->
-                        <Line X1="7" X2="23"
-                              Y1="15" Y2="15"
-                              Stroke="{StaticResource FadedBlue}" StrokeThickness="1.5" />
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+    
+    <SolidColorBrush x:Key="RedExit">#C1292E</SolidColorBrush>
+    <SolidColorBrush x:Key="FadedBlue">#235789</SolidColorBrush>
 
     <!--Кнопка для перехода в корневую папку-->
     <Style x:Key="DirectoryButton" TargetType="{x:Type Button}">
